Changed Contact Us, and added author's guidelines

--- a/Applications.html
+++ b/Applications.html
@@ -86,6 +86,7 @@
               <li><a href="Foundational-Research.html">Foundational Research</a></li>
               <li><a href="Systems-Research.html">Systems Research</a></li>
               <li><a href="Applications.html">Applications</a></li>
+              <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
             </ul>
 
           </li>
@@ -166,7 +167,7 @@
         inferencing, context learning, application based benchmarking of ML models, experience from end-to-end
         deployment.
         Authors can submit papers <strong> maximum of 6 pages </strong> including references. Accepted papers will be 
-        submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore’s scope and quality requirements.
+        submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore’s scope and quality requirements. For more details check <a href="AuthorGuide.html">Author's Guidelines.</a>
       </p>
       <p class="para">The topics of interests include, but are not limited to:</p>
       <p class="para">
