--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,7 @@
                             <li><a href="Systems-Research.html">Systems Research</a>
                             </li>
                             <li><a href="Applications.html">Applications</a></li>
+                            <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
                     <li><a href="Program-Schedule.html">Program Schedule</a></li>
@@ -152,7 +153,8 @@
             <div class="section-header">
                 <h3>Contact</h3>
             </div>
-            <div class="row">
+            <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p>
+            <!-- <div class="row">
 
 
                 <div class="col-md-8  form">
@@ -175,7 +177,7 @@
                         </div>
                         <div><button type="submit">Send Message</button></div>
                     </form>
-                </div>
+                </div> -->
 
                 <!--<div class="col-md-4">
                     <center>
