--- a/Systems-Research.html
+++ b/Systems-Research.html
@@ -86,6 +86,7 @@
               <li><a href="Foundational-Research.html">Foundational Research</a></li>
               <li><a href="Systems-Research.html">Systems Research</a></li>
               <li><a href="Applications.html">Applications</a></li>
+              <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
             </ul>
           </li>
           <li><a href="Program-Schedule.html">Program Schedule</a></li>
@@ -161,7 +162,7 @@
         science,
         management of data, artificial intelligence, machine/deep learning and their applications focused on systems
         research. Authors can submit papers<strong> maximum of 6 pages </strong>including references. Accepted papers will 
-        be submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore’s scope and quality requirements.
+        be submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore’s scope and quality requirements.For more details check <a href="AuthorGuide.html">Author's Guidelines.</a>
       </p>
       <p class="para">The topics of interests include, but are not limited to:</p>
 
