--- a/final-camera-ready-guidelines.html
+++ b/final-camera-ready-guidelines.html
@@ -81,6 +81,7 @@
                             <li><a href="Foundational-Research.html">Foundational Research</a></li>
                             <li><a href="Systems-Research.html">Systems Research</a></li>
                             <li><a href="Applications.html">Applications</a></li>
+                            <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
                     <li><a href="Program-Schedule.html">Program Schedule</a></li>
