--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                             <li><a href="Systems-Research.html">Systems Research</a>
                             </li>
                             <li><a href="Applications.html">Applications</a></li>
+                            <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
                     <li><a href="Program-Schedule.html">Program Schedule</a></li>
@@ -311,9 +312,10 @@
             <div class="section-header">
                 <h3>Contact Us</h3>
             </div>
+            <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p>
             <div class="row">
 
-                <div class="col-md-2"></div>
+                <!-- <div class="col-md-2"></div>
                 <div class="col-md-8 form">
                     <form action="https://formspree.io/f/meqnzvwn" method="post" role="form" class="contactForm">
                         <div class="form-row">
@@ -335,7 +337,7 @@
                         <div><button type="submit">Send Message</button></div>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Contact Section end -->
