--- a/Applications.html
+++ b/Applications.html
@@ -188,7 +188,7 @@
       
       <p class="para">
         <strong>Important Dates : </strong><br>
-        <strong>Abstract Submission Starts:</strong> June 15, 2023<br>
+        <strong>Paper Submission Starts:</strong> June 15, 2023<br>
         <strong>Paper Submission Deadline:</strong> July 15, 2023<br>
         <strong>Final Notification:</strong> September 15, 2023<br>
         <strong>Camera Ready Submission:</strong> October 20, 2023<br>
