--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -254,9 +254,16 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/Alok-Ranjan.jpg" width="250px" height="250px">
+                            <img src="img/" width="250px" height="250px">
                             <a href="https://www.linkedin.com/in/alok-ranjan/?originalSubdomain=in" target="_blank"><p class="commitee-names">Alok Ranjan</p></a>
                             <p class="position">Bosch, India</p>
+                        </div>
+                    </div>
+                    <div class="image-holder">
+                        <div>
+                            <img src="img/E4860.jpg" width="250px" height="250px">
+                            <a href="https://scholar.google.com/citations?user=U53p3D8AAAAJ&hl=en" target="_blank"><p class="commitee-names">Dr Sandeep Kumar</p></a>
+                            <p class="position">Christ University</p>
                         </div>
                     </div>
                 </div>
