--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -258,6 +258,14 @@
                             <p class="position">Bosch, India</p>
                         </div>
                     </div>
+
+                    <div class="image-holder">
+                        <div>
+                            <img src="img/sandeepkumar.jpg" width="250px" height="250px">
+                            <a href="https://scholar.google.com/citations?user=U53p3D8AAAAJ&hl=en" target="_blank"><p class="commitee-names">Alok Ranjan</p></a>
+                            <p class="position">Christ University</p>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!--
