--- a/index.html
+++ b/index.html
@@ -247,13 +247,22 @@
                                                     <br>
                                                     <a href="Systems-Research.html">Systems Research</a><br>
                                                     <a href="Applications.html">Applications </a>
+                                                    <p class="para">
+                                                        <strong>Important Dates : </strong><br>
+                                                        <strong>Abstract Submission Starts:</strong> June 15, 2023<br>
+                                                        <strong>Paper Submission Deadline:</strong> July 15, 2023<br>
+                                                        <strong>Final Notification:</strong> September 15, 2023<br>
+                                                        <strong>Camera Ready Submission:</strong> October 20, 2023<br>
+                                                        <strong>Registration Due:</strong> November 1, 2023<br>
+                                                        <strong>Venue :</strong> NITK, Surathkal
+                                                      </p>
                                                 </center>
                                             </div>
                                             <br>
                                         </div>
                                     </div>
-
-
+                                    
+                                    
                             </section>
                             <!-- Call For Papers Section End -->
 
