--- a/AuthorGuide.html
+++ b/AuthorGuide.html
@@ -182,7 +182,7 @@
 
             </li>
             <br>
-            <li>A double-blind peer-review process will be followed to evaluate all papers submitted for the conference.</li>
+            <li><b>A double-blind peer-review process will be followed to evaluate all papers submitted for the conference.</b></li>
             <br><li>If a paper is accepted, at least one author needs to do full author registration and present the paper.</li>
             <br><li>Every accepted paper has to be individually registered.</li>
             <br><li>As per IEEE Policy, an author of every published paper needs to sign a copyright agreement. The instructions for the copyright agreement will be shared with the author after acceptance of paper.</li>
