--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -254,7 +254,7 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/" width="250px" height="250px">
+                            <img src="img/Alok-Ranjan.jpg" width="250px" height="250px">
                             <a href="https://www.linkedin.com/in/alok-ranjan/?originalSubdomain=in" target="_blank"><p class="commitee-names">Alok Ranjan</p></a>
                             <p class="position">Bosch, India</p>
                         </div>
@@ -263,7 +263,7 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/sandeepkumar.jpg" width="250px" height="250px">
-                            <a href="https://scholar.google.com/citations?user=U53p3D8AAAAJ&hl=en" target="_blank"><p class="commitee-names">Alok Ranjan</p></a>
+                            <a href="https://scholar.google.com/citations?user=U53p3D8AAAAJ&hl=en" target="_blank"><p class="commitee-names">Dr. Sandeep Kumar</p></a>
                             <p class="position">Christ University</p>
                         </div>
                     </div>
