--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -84,6 +84,7 @@
                         </ul>
                     </li>
                     <li><a href="Program-Schedule.html">Program Schedule</a></li>
+                    <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
