--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
+                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
                             <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                             <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
 
@@ -267,8 +268,12 @@
                             </section>
                             <!-- Call For Papers Section End -->
 
+                           
 
-
+                        </div>
+                        <div class="col-md-2">
+                            <h2>Sponsors    </h2>
+                            <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
                         </div>
                     </div>
                 </div>
@@ -308,6 +313,10 @@
 
                     </div>
                 </div>
+                <div class="card" id="card">
+                    <h3 style="margin-top: 10px;">Latest Updates</h3>
+                    <p><strong>Paper Submission Deadline:</strong><s> July 15, 2023</s> August 11, 2023 (Hard Deadline)<br></p>
+                  </div>
             </div>
         </div>
     </section>
@@ -324,8 +333,8 @@
             <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p>
             <div class="row">
 
-                <!-- <div class="col-md-2"></div>
-                <div class="col-md-8 form">
+                
+                <!--<div class="col-md-8 form">
                     <form action="https://formspree.io/f/meqnzvwn" method="post" role="form" class="contactForm">
                         <div class="form-row">
                             <div class="form-group col-md-6">
