--- a/registration.html
+++ b/registration.html
@@ -88,6 +88,7 @@
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
+                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
                             <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                             <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
 
@@ -147,7 +148,60 @@
         </div>
     </section>
     <!-- Banner Section end -->
-    <h1 style="text-align: center; margin-top: 2%;">Registrations will start soon!</h1>
+    <h1 style="text-align: center; margin-top: 2%;">Registration</h1>
+    <table  style="margin: auto; margin-bottom: 100px; padding: 10px;">
+        <thead>
+            <tr >
+                <th style="padding: 10px; text-align: center;">Author Category</th>
+                <th colspan="2" style="text-align: center; padding: 10px;">Indian Delegates (INR)</th>
+                <th colspan="2" style="text-align: center; padding: 10px;">	International Delegates (USD)</th>
+            </tr>
+            <tr style="text-align: center; padding: 10px;">
+                <th></th>
+                <th>Early Bird</th>
+                <th>Regular</th>
+                <th>Early Bird</th>
+                <th>Regular</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr style="text-align: center; padding: 10px;">
+                <td>IEEE Student Member</td>
+                <td>₹4000	</td>
+                <td>₹5000</td>
+                <td>$100	</td>
+                <td>$125</td>
+            </tr>
+            <tr style="text-align: center; padding: 10px;">
+                <td>Non-IEEE Student Member</td>
+                <td>₹5000</td>
+                <td>₹6250</td>
+                <td>$125</td>
+                <td>$175</td>
+            </tr>
+            <tr style="text-align: center; padding: 10px;">
+                <td>IEEE Professional Member</td>
+                <td>₹7200</td>
+                <td>₹9000</td>
+                <td>$200</td>
+                <td>$250</td>
+            </tr>
+            <tr style="text-align: center; padding: 10px;">
+                <td>Non-IEEE Professional Member</td>
+                <td>₹9000</td>
+                <td>₹11250</td>
+                <td>$225</td>
+                <td>$300</td>
+            </tr>
+            <tr style="text-align: center; padding: 10px;">
+                <td>Only Attending</td>
+                <td>₹2000</td>
+                <td>₹3000</td>
+                <td>$50</td>
+                <td>$75</td>
+            </tr>
+        </tbody>
+    </table>
     <!-- Contact Section Start -->
     <!--
         2022 Registration Page 
