--- a/Applications.html
+++ b/Applications.html
@@ -94,6 +94,7 @@
           <li><a href="#">Committee</a>
 
             <ul class="nav-dropdown">
+              <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
               <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
               <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
 
@@ -200,7 +201,11 @@
       <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
       <br><br>
     </div>
-    
+    <div class="col-md-2">
+      <br>
+      <center><h2 style="font-size: x-large;">Sponsors</h2></center>
+      <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
+    </div>
     <!--<div class="col-md-2">
       <br>
       <center>
