--- a/accepted-papers.html
+++ b/accepted-papers.html
@@ -88,6 +88,7 @@
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
+                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
                             <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                             <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
 
@@ -134,6 +135,7 @@
                                 </span>
                             </p>
                         </div>
+                        
                     </div>
                 </div>
             </div>
