--- a/speakers.html
+++ b/speakers.html
@@ -90,6 +90,7 @@
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
+                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
                             <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                             <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
 
