added a name to tc page

--- a/Technical-Committee.html
+++ b/Technical-Committee.html
@@ -257,13 +257,14 @@
                             <p>veeraswamy		a</p><br>
                             <p>Vinod		Joshi</p>
                             <p>Vishal		Moyal</p>
+                            <p>Vikas Singh</p>
                             <p>Vivekraj		K	</p><br>
                             <p>Wenjia		Niu</p>
                             <p>Xin		Han</p>
                             <p>Yukata		Watanobe</p>
                            
                         </div>
-                        <div class="affiliation" style="width: 400px;">
+                        <p class="affiliation" style="width: 400px;">
                             <h6 style="background-color: #faa41a; width: 100%; color: black;">Affiliation</h6>
                             <p>BMS CE	India</p>
                             <p>BITS Pilani KK Birla Goa Campus</p>
@@ -371,10 +372,12 @@
                             <p>Koneru Lakshmaiah Educational Foundation,Vaddeswaram, Guntur, Andhra Pradesh, India.	</p>
                             <p>Manipal Institute of Technology, Manipal	India</p>
                             <p>SVKM's Institute of Technology, Dhule</p>
+                            <p>National Institute of Technology Karnataka</p>
                             <p>Indian Institute of Information Technology Dharwad</p>
                             <p>Beijing Jiaotong University</p>
                             <p>University of Macau</p>
                             <p>The University of Aizu	Japan</p>
+
                            
                         </div>
                         <div></div>
