updated latest updates

--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@
                 <div class="card" id="card">
                     <h3 style="margin-top: 10px;">Latest Updates</h3>
                     <p><strong>Paper Submission Deadline:</strong><s> July 15, 2023</s> August 11, 2023 (Hard Deadline)<br></p>
-                  </div>
+                    <p><b>Author Notifications </b>rolled out on <b>September 30, 2023</b>. Acceptance rate is ~26%.</p>
+                </div>
             </div>
         </div>
     </section>
