added venue information

--- a/venue.html
+++ b/venue.html
@@ -172,6 +172,8 @@
                         </p>
                     </div>
                 </div>
+
+
             </div>
         </div>
     </section>
@@ -183,7 +185,20 @@
                 width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
         </div>
         
-    </div>
+    </div>  
+    <h2 style="padding-left: 20px;">Information: </h2>
+        <ul>
+            <li>        <a href="https://www.google.com/travel/search?q=NITK%20Surathkal&qs=OAA&ved=0CAAQ5JsGahcKEwiYjM_2__CBAxUAAAAAHQAAAAAQCw" target="_blank">Nearby Hostels</a></>
+            </li>
+            <li>        <a href="https://www.nitk.ac.in/How_To_Reach" target="_blank">How to Reach</a></h6>
+            </li>
+            <li>        <a href="https://www.thrillophilia.com/destinations/mangalore/places-to-visit" target="_blank">Local Popular Places</a></h6>
+            </li>
+        </ul>
+        <!-- <h6 style="padding-left: 20px; padding-top: 20px;">Nearby Hostels: <a href="https://www.google.com/travel/search?q=NITK%20Surathkal&qs=OAA&ved=0CAAQ5JsGahcKEwiYjM_2__CBAxUAAAAAHQAAAAAQCw" target="_blank">Nearby Hostels</a></h6>
+        <h6 style="padding-left: 20px;">How to Reach: <a href="https://www.nitk.ac.in/How_To_Reach" target="_blank">How to Reach</a></h6>
+        <h6><a href="https://www.thrillophilia.com/destinations/mangalore/places-to-visit" target="_blank">Local Popular Places</a></h6> -->
+    
     <!-- Footer Starts-->
     <!-- Footer Start -->
     <footer id="footer">
