added conference schedule

--- a/index.html
+++ b/index.html
@@ -160,11 +160,12 @@
     <!-- About Section Start-->
     <section id="about">
         <div class="container1">
-            <div class="card" id="card">
+            <div class="card" id="card" style="height: 350px;"> 
                 <h3 style="margin-top: 10px;">Latest Updates</h3>
                 <p><strong>Paper Submission Deadline:</strong><s> July 15, 2023</s> August 11, 2023 (Hard Deadline)<br></p>
                 <p><b>Author Notifications </b>rolled out on <b>September 30, 2023</b>. Acceptance rate is ~26%.</p>
                 <p><a href="https://docs.google.com/document/d/1CJ3bkDRkxrR5mujIvdYy0g0O8reSHiTNgxUclt4dGPM/edit" target="_blank">Author Instructions for eCopyright, Camera Ready Submission and Registration</a></p>
+                <p><a href="https://docs.google.com/document/d/1GsCEpjlnCMX8oQMoxhL6BmrTVmQ6HpmM/edit" target="_blank" style="width: 100%;">Conference Schedule</a></p>
             </div>  
         </div>
         <div class="container">
