added program schedule, speakers

--- a/2022.html
+++ b/2022.html
@@ -77,6 +77,15 @@
                 <ul class="nav-menu">
                     <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
                     <!-- <li><a href="about.html">About</a></li> -->
+                    <li><a href="#">Committee</a>
+
+                        <ul class="nav-dropdown">
+                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
+                            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
+                        </ul>
+                    </li>
+
+
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
                             <li><a href="Foundational-Research.html">Foundational Research</a></li>
@@ -87,15 +96,16 @@
                         </ul>
                     </li>
                     <li><a href="Program-Schedule.html">Program Schedule</a></li>
-                    <li><a href="#">Committee</a>
 
+
+                    <li><a href="#">Workshops</a>
                         <ul class="nav-dropdown">
-                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
-                            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
-                            <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
+                            <li><a href="smartcity.html">Smart City Stack workshop</a></li>
+                            <li><a href="girlgeekhack.html">GirlGeekHack'23 (Mangalore Subsection Edition)</a></li>
+                            <li><a href="studentcongress.html">CS Student Congress</a></li>
+                        </ul></li>
 
-                        </ul>
-                    </li>
+
                     <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
