--- a/Technical-Committee.html
+++ b/Technical-Committee.html
@@ -120,19 +120,7 @@
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
-
-            <li>
-              <a href="#">Call for Papers</a>
-              <ul class="nav-dropdown">
-                <li>
-                  <a href="Foundational-Research.html">Foundational Research</a>
-                </li>
-                <li><a href="Systems-Research.html">Systems Research</a></li>
-                <li><a href="Applications.html">Applications</a></li>
-                <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
-              </ul>
-            </li>
-            <li><a href="Program-Schedule.html">Program Schedule</a></li>
+            <!-- <li><a href="about.html">About</a></li> -->
             <li>
               <a href="#">Committee</a>
 
@@ -148,20 +136,47 @@
                 <li>
                   <a href="Organizing-Committee.html">Organizing Committee</a>
                 </li>
-                <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
               </ul>
             </li>
+
+            <li>
+              <a href="#">Call for Papers</a>
+              <ul class="nav-dropdown">
+                <li>
+                  <a href="Foundational-Research.html">Foundational Research</a>
+                </li>
+                <li><a href="Systems-Research.html">Systems Research</a></li>
+                <li><a href="Applications.html">Applications</a></li>
+                <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
+              </ul>
+            </li>
+            <li><a href="Program-Schedule.html">Program Schedule</a></li>
+
+            <li>
+              <a href="#">Workshops</a>
+              <ul class="nav-dropdown">
+                <li><a href="smartcity.html">Smart City Stack workshop</a></li>
+                <li>
+                  <a href="girlgeekhack.html"
+                    >GirlGeekHack'23 (Mangalore Subsection Edition)</a
+                  >
+                </li>
+                <li><a href="studentcongress.html">CS Student Congress</a></li>
+              </ul>
+            </li>
+
             <li><a href="speakers.html">Speakers</a></li>
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
+
             <li>
               <a href="#">Archives</a>
+
               <ul class="nav-dropdown">
                 <li><a href="2022.html">2022</a></li>
               </ul>
             </li>
-
             <li><a href="registration.html">Registration</a></li>
           </ul>
         </nav>
@@ -199,7 +214,7 @@
         </div>
       </div>
     </section>
-    
+
     <table class="center">
       <tr>
         <th>Name</th>
@@ -658,7 +673,6 @@
         <td>The University of Aizu, Japan</td>
       </tr>
     </table>
-
 
     <footer id="footer">
       <div class="footer-top">
