--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                 <ul class="nav-menu">
                     <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
                     <!-- <li><a href="about.html">About</a></li> -->
+                    <li><a href="#">Committee</a>
+
+                        <ul class="nav-dropdown">
+                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
+                            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
+                        </ul>
+                    </li>
+
+
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
                             <li><a href="Foundational-Research.html">Foundational Research</a></li>
@@ -89,34 +98,27 @@
                         </ul>
                     </li>
                     <li><a href="Program-Schedule.html">Program Schedule</a></li>
-                    <li><a href="#">Committee</a>
 
+
+                    <li><a href="#">Workshops</a>
                         <ul class="nav-dropdown">
-                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
-                            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
-                            <!--<li><a href="Program-Committee.html">Program Committee</a></li>-->
+                            <li><a href="smartcity.html">Smart City Stack workshop</a></li>
+                            <li><a href="girlgeekhack.html">GirlGeekHack'23 (Mangalore Subsection Edition)</a></li>
+                            <li><a href="studentcongress.html">CS Student Congress</a></li>
+                        </ul></li>
 
-                        </ul>
-                    </li>
+
                     <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
-                    <!--<li><a href="#">For Authors</a>
+                    
+                        <li><a href="#">Archives</a>
 
-                        <ul class="nav-dropdown">
-                            <li><a href="accepted-papers.html">Accepted Papers</a></li>
-                            <li><a href="final-camera-ready-guidelines.html">Final Camera Ready Guidelines</a></li>
-
-                        </ul>
-                        </li>-->
-
-                    <li><a href="#">Archives</a>
-                        <ul class="nav-dropdown">
-                            <li><a href="2022.html">2022</a></li>
-                        </ul>
-
-                    </li>
+                            <ul class="nav-dropdown">
+                                <li><a href="2022.html">2022</a></li>
+                            </ul>
+                            </li>
                     <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
