updated sc link

--- a/studentcongress.html
+++ b/studentcongress.html
@@ -187,7 +187,7 @@
                   /><br />
                   <span class="banner-box">
                     <a href="index.html">Home</a>
-                    <a href="girlgeekhack.html"
+                    <a href="studentcongress.html"
                       >CS Student Congress</a
                     >
                   </span>
