--- a/Program-Schedule.html
+++ b/Program-Schedule.html
@@ -211,13 +211,11 @@
     </section>
 
     <div class="col-md-10">
-        
-        <b style="text-align: center; font-size: 30px;">ICDDS 2023 Schedule</b>
-
-        
+        <br>
+        <p>Kindly find the schedule for ICDDS 2023!</p>
         <br>
 
-        <iframe src="https://drive.google.com/file/d/136GBjAPGn9e0dHgyM0rZbCzxiVGG3v1w/preview" width="100%" height="600px"></iframe>
+        <p>Conference Schedule: <a href="https://docs.google.com/document/d/1GsCEpjlnCMX8oQMoxhL6BmrTVmQ6HpmM/edit" target="_blank" style="width: 100%;">https://docs.google.com/document/d/1GsCEpjlnCMX8oQMoxhL6BmrTVmQ6HpmM/edit</a></p>
     </div>  
     <!-- Banner Section end -->
 
