--- a/AuthorGuide.html
+++ b/AuthorGuide.html
@@ -209,6 +209,8 @@
       <br>
       <center><h2 style="font-size: x-large;">Sponsors</h2></center>
       <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
+      <img src="img/Bosch_symbol_logo_black_red.svg" alt=""  width = "100%" height = "150px" class="partners">
+                            <img src="img/ericsson.png" alt="" width="100%" height="150px">
     </div>
 
     <!--<div class="col-md-2">
