--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -404,7 +404,8 @@
                 <h3>Sponsors</h3>
 
                     <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
-
+                    <img src="img/Bosch_symbol_logo_black_red.svg" alt=""  width = "100%" height = "150px" class="partners">
+                    <img src="img/ericsson.png" alt="" width="100%" height="150px">
             </center>
         </div>
         <!--
