--- a/girlgeekhack.html
+++ b/girlgeekhack.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title> GirlGeekHack'23 | ICDDS</title>
+    <title>GirlGeekHack'23 | ICDDS</title>
     <meta
       name="keywords"
       content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
@@ -175,8 +175,7 @@
           <div class="col-md-12">
             <div class="row">
               <div class="col-md-6">
-                <h1 class="banner-header"> GirlGeekHack'23</h1>
-
+                <h1 class="banner-header">GirlGeekHack'23</h1>
               </div>
               <div class="col-md-6">
                 <p class="banner-nav">
@@ -187,9 +186,7 @@
                   /><br />
                   <span class="banner-box">
                     <a href="index.html">Home</a>
-                    <a href="girlgeekhack.html"
-                      > GirlGeekHack'23</a
-                    >
+                    <a href="girlgeekhack.html"> GirlGeekHack'23</a>
                   </span>
                 </p>
               </div>
@@ -203,37 +200,47 @@
       <div class="col-md-1"></div>
       <div class="col-md-8">
         <p class="para">
-            <b>IEEE NITK Computer Society in collaboration with IEEE Computer Society Bangalore Chapter presents GIRLGEEKHACK’ 23.</b>
-            <br>
-            Get ready to showcase your problem solving and coding skills during this 48 hour hackathon
-            <br>
-            <br>
+          <b
+            >IEEE NITK Computer Society in collaboration with IEEE Computer
+            Society Bangalore Chapter presents GIRLGEEKHACK’ 23.</b
+          >
+          <br />
+          Get ready to showcase your problem solving and coding skills during
+          this 48 hour hackathon
+          <br />
+          <br />
 
-            <b>Theme: </b>Remote Work and Digital Collaboration
+          <b>Theme: </b>Remote Work and Digital Collaboration
 
-            <br>
-            <br><b>Date: </b>29th November (6PM) to 1st December (6PM), 2023 <br>
-            <b>Venue: </b>National Institute of Technology Karnataka, Surathkal (Online for participants outside NITK)
-            <br>
-            <br>
+          <br />
+          <br /><b>Date: </b>29th November (6PM) to 1st December (6PM), 2023
+          <br />
+          <b>Venue: </b>National Institute of Technology Karnataka, Surathkal
+          (Online for participants outside NITK)
+          <br />
+          <br />
 
-            <b>Important Details: </b>
-            <br>
-            • Form a team of 4 members <br />
-            • The team leader must be a girl<br />
-            • There is no registration fee<br />
-            • Winners will be awarded attractive cash prizes worth 30K!<br />
-            <br>
-            Participants are free to choose their own problem statements. However the problem statement should be relevant to the theme of the hackathon. The major outcome expected from this challenge is a design solution that is novel, feasible, scalable and sustainable that can cater to the current global need.
-            <br>
-            Looking forward to your enthusiastic participation.
-            <br><br>
-            Registration Link: <a href="https://lnkd.in/gr-6Rd7S">https://lnkd.in/gr-6Rd7S</a>
-            <br><br>
-            Registration Deadline : 28th November, 2023 (EOD)
+          <b>Important Details: </b>
+          <br />
+          • Form a team of 4 members <br />
+          • The team leader must be a girl<br />
+          • There is no registration fee<br />
+          • Winners will be awarded attractive cash prizes worth 30K!<br />
+          <br />
+          Participants are free to choose their own problem statements. However
+          the problem statement should be relevant to the theme of the
+          hackathon. The major outcome expected from this challenge is a design
+          solution that is novel, feasible, scalable and sustainable that can
+          cater to the current global need.
+          <br />
+          Looking forward to your enthusiastic participation.
+          <br /><br />
+          Registration Link:
+          <a href="https://lnkd.in/gr-6Rd7S">https://lnkd.in/gr-6Rd7S</a>
+          <br /><br />
+          Registration Deadline : 28th November, 2023 (EOD)
         </p>
 
-        
         <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
         <br /><br />
       </div>
@@ -247,6 +254,14 @@
           width="100%"
           height="150px"
         />
+        <img
+          src="img/Bosch_symbol_logo_black_red.svg"
+          alt=""
+          width="100%"
+          height="150px"
+          class="partners"
+        />
+        <img src="img/ericsson.png" alt="" width="100%" height="150px" />
       </div>
       <!--<div class="col-md-2">
       <br>
