--- a/smartcity.html
+++ b/smartcity.html
@@ -356,6 +356,8 @@ India Urban Data Exchange (IUDX) is a transformative initiative of the Ministry 
           width="100%"
           height="150px"
         />
+        <img src="img/Bosch_symbol_logo_black_red.svg" alt=""  width = "100%" height = "150px" class="partners">
+                            <img src="img/ericsson.png" alt="" width="100%" height="150px">
       </div>
       <!--<div class="col-md-2">
       <br>
