--- a/studentcongress.html
+++ b/studentcongress.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title> CS Student Congress'23 | ICDDS</title>
+    <title>CS Student Congress'23 | ICDDS</title>
     <meta
       name="keywords"
       content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
@@ -176,7 +176,6 @@
             <div class="row">
               <div class="col-md-6">
                 <h1 class="banner-header">CS Student Congress</h1>
-
               </div>
               <div class="col-md-6">
                 <p class="banner-nav">
@@ -187,9 +186,7 @@
                   /><br />
                   <span class="banner-box">
                     <a href="index.html">Home</a>
-                    <a href="studentcongress.html"
-                      >CS Student Congress</a
-                    >
+                    <a href="studentcongress.html">CS Student Congress</a>
                   </span>
                 </p>
               </div>
@@ -203,24 +200,25 @@
       <div class="col-md-1"></div>
       <div class="col-md-8">
         <p class="para">
-            IEEE Computer Society Bangalore Chapter and IEEE NITK Computer Society SBC invite all office bearers of IEEE Computer Society SBCs of Bangalore Chapter to participate in the CS Student Congress.
-            <br>
-            <br>    
-            <b>Event Details:</b>
-            <br>
-       
-            <b>Date: </b>3rd December, 2023 <br>
-            <b>Time: </b>10 AM <br>
-            <b>Venue: </b>National Institute of Technology Karnataka, Surathkal
+          IEEE Computer Society Bangalore Chapter and IEEE NITK Computer Society
+          SBC invite all office bearers of IEEE Computer Society SBCs of
+          Bangalore Chapter to participate in the CS Student Congress.
+          <br />
+          <br />
+          <b>Event Details:</b>
+          <br />
 
-            Attendance at the Student Congress is free of charge.
-            <br>
-            <br>
+          <b>Date: </b>3rd December, 2023 <br />
+          <b>Time: </b>10 AM <br />
+          <b>Venue: </b>National Institute of Technology Karnataka, Surathkal
+          Attendance at the Student Congress is free of charge.
+          <br />
+          <br />
 
-We look forward to your participation and the opportunity to create an atmosphere of learning, collaboration, and innovation.
+          We look forward to your participation and the opportunity to create an
+          atmosphere of learning, collaboration, and innovation.
         </p>
 
-        
         <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
         <br /><br />
       </div>
@@ -234,6 +232,14 @@ We look forward to your participation and the opportunity to create an atmospher
           width="100%"
           height="150px"
         />
+        <img
+          src="img/Bosch_symbol_logo_black_red.svg"
+          alt=""
+          width="100%"
+          height="150px"
+          class="partners"
+        />
+        <img src="img/ericsson.png" alt="" width="100%" height="150px" />
       </div>
       <!--<div class="col-md-2">
       <br>
