--- a/Applications.html
+++ b/Applications.html
@@ -273,6 +273,14 @@
           width="100%"
           height="150px"
         />
+        <img
+          src="img/Bosch_symbol_logo_black_red.svg"
+          alt=""
+          width="100%"
+          height="150px"
+          class="partners"
+        />
+        <img src="img/ericsson.png" alt="" width="100%" height="150px" />
       </div>
       <!--<div class="col-md-2">
       <br>
