--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@
                         <div class="col-md-2">
                             <h2>Sponsors    </h2>
                             <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
+                            <img src="img/Bosch_symbol_logo_black_red.svg" alt=""  width = "100%" height = "150px" class="partners">
+                            <img src="img/ericsson.png" alt="" width="100%" height="150px">
                         </div>
                     </div>
                 </div>
