--- a/speakers.html
+++ b/speakers.html
@@ -216,6 +216,12 @@
                                     <p class="position">Head, Mobility Think-tank, Bosch, India</p>
                                 </div>
 
+                                <div>
+                                  <img src="img/vln.jpg" width="250px" height="250px">
+                                  <p class="commitee-names">PROF. VLN Simhan</p>
+                                  <p class="position">Southern Georgia University, USA</p>
+                              </div>
+
 
 
                             </div>
